Populated new functions Added doxygen support

--- a/package.xml
+++ b/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>rpi-rt</name>
-  <version>0.0.1</version>
-  <description>Package to store a library for RT Use of an RPI 4B</description>
+  <version>0.1.0</version>
+  <description>Library for RT Use of an RPI 4B</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
